# zagents-generator

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  package-lock.json  package.json  refactor-catalog.cjs  refactor.js  renovate.json  rust-toolchain.toml  vitest.config.ts
.claude/: ecc-tools.json  identity.json
.claude-plugin/: marketplace.json  plugin.json
.codex/: AGENTS.md  config.toml.example
__tests__/: adr-index.test.ts  agent-gemini-generator-lib.test.ts  audit-deps.test.ts  claude-marketplace-plugin.test.ts  cli-flags-completions.test.ts  codex-skills.test.ts  dev-toolkit.test.ts  doctor-fail-message.test.ts  e2e-lifecycle.test.ts  e2e-scaffold-validate.test.ts  examples-federation.test.ts  examples-vertical-tour.test.ts  gemini-audit-bundle.test.ts  gemini-compare.test.ts  gemini-diag.test.ts  gemini-export-config.test.ts  gemini-genome.test.ts  gemini-oia-manifest.test.ts  gemini-sbom-audit.test.ts  gemini-score.test.ts  gemini-threat-model.test.ts  gemini-wizard.test.ts  manifest-kernel-version.test.ts  marketplace-entry.test.ts  mcp-cmd.test.ts  mcp-dispatch-integration.test.ts  metaharness-subcommands.test.ts  pack-contents.test.ts  publish-cmd.test.ts  upgrade-cmd.test.ts  validate-oia-gate.test.ts  version-bump.test.ts  witness-tamper.test.ts  workflows.test.ts
crates/kernel/: Cargo.toml
crates/kernel/benches/: mcp_validate.rs
crates/kernel/src/: claims.rs  federation.rs  lib.rs  witness.rs
docs/: ARCHITECTURE.md  OVERVIEW.md  RELEASE.md  USAGE.md  USERGUIDE.md
examples-packages/: GISTS.md  (+1 more)
(+376 files in other folders)
