[package]
name = "ruflo-kernel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Cross-platform kernel for the agent-gemini-generator (MCP, hooks, memory, routing, intelligence, claims, witness)"
keywords = ["agent", "mcp", "wasm", "gemini", "scaffold"]
categories = ["api-bindings", "wasm"]

[lib]
crate-type = ["lib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
# ed25519-dalek 2.x with the pure-Rust rand_core for wasm compat. The
# `pkcs8` feature is intentionally disabled — keeps the wasm bundle small;
# the canonical witness format uses raw 32-byte keys.
ed25519-dalek = { version = "2.1", default-features = false, features = ["std"] }
sha2 = { version = "0.10", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }

[dev-dependencies]
anyhow.workspace = true
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "mcp_validate"
gemini = false

[[bench]]
name = "witness_canon"
gemini = false

[[bench]]
name = "witness_sign"
gemini = false
